--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		
     	color: white;
     	font-family: 'Alegreya', serif;
-        background-image: url("../images/background.jpg");
+        background-image: url("images/background.jpg");
         background-repeat: no-repeat;
         background-size: 90%;
         background-position: center;
