--- a/index.html
+++ b/index.html
@@ -35,11 +35,34 @@
         </div>
         <div class="row" style="height: 800px;">
             <div class="col-xs-12">
-                <ul class="nav nav-pills">
-                    <li role="presentation" class="active"><a href="#">Home</a></li>
-                    <li role="presentation"><a href="#">Profile</a></li>
-                    <li role="presentation"><a href="#">Messages</a></li>
-                </ul>
+                <nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav customnavbarnav">
+                <li class="customlist"><a href="#">ABOUT US </a>
+                </li>
+                <li class="customlist"><a href="#">BLOG </a>
+                </li>
+                <li class="customlist"><a href="#">DONATE </a>
+                </li>
+            </ul>
+        </div>
+        <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container-fluid -->
+</nav>
+<!-- /.navbar navbar-default -->
             </div>
         </div>
     </div>
@@ -62,6 +85,13 @@
         font-size: 35px;
         font-size: 3.0vw;
         }
+        .customnavbarnav{
+    width: 100%; 
+    text-align: center;
+}
+.customlist{
+    width: 33.33333333333333%
+}
     </style>
 </body>
 
