--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/landingPage.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-    <link rel="shortcut icon" type="image/png" href="../images/heart.png">
+    <link rel="shortcut icon" type="image/png" href="images/heart.png">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <!-- Latest compiled and minified JavaScript -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
     <meta name="description" content="Kingiti School Scholarship and Village Health Outreach Fund, Inc.">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -25,7 +27,7 @@
     <link href="https://fonts.googleapis.com/css?family=Alegreya|Lora" rel="stylesheet">
 </head>
 
-<body>
+<body id="hey">
     <div class="container">
         <br>
         <div class="row" id="row1">
@@ -33,66 +35,35 @@
                 <p>&nbsp;&nbsp;Kingiti School Scholarship and Village Health Outreach Fund, Inc.</p>
             </div>
         </div>
-        <div class="row" style="height: 800px;">
+        <div class="row" id="thisRow">
             <div class="col-xs-12">
                 <nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-        </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav customnavbarnav">
-                <li class="customlist"><a href="#">ABOUT US </a>
-                </li>
-                <li class="customlist"><a href="#">BLOG </a>
-                </li>
-                <li class="customlist"><a href="#">DONATE </a>
-                </li>
-            </ul>
-        </div>
-        <!-- /.navbar-collapse -->
-    </div>
-    <!-- /.container-fluid -->
-</nav>
-<!-- /.navbar navbar-default -->
-            </div>
-        </div>
-    </div>
-    <style type="text/css">
-    body {
-        background-color: #99BD0C;
-    }
-        #row1{
-            background-image: url("images/background.jpg");
-        background-repeat: no-repeat;
-        background-size: 100%;
-        background-position: center;
-        height: 600px;
-        }
-        #title{
-
-
-        color: white;
-        font-family: 'Alegreya', serif;
-        font-size: 35px;
-        font-size: 3.0vw;
-        }
-        .customnavbarnav{
-    width: 100%; 
-    text-align: center;
-}
-.customlist{
-    width: 33.33333333333333%
-}
-    </style>
+                    <div class="container-fluid">
+                        <!-- Brand and toggle get grouped for better mobile display -->
+                        <div class="navbar-header">
+                            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                                <span class="sr-only">Toggle navigation</span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                            </button>
+                        </div>
+                        <!-- Collect the nav links, forms, and other content for toggling -->
+                        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                            <ul class="nav navbar-nav customnavbarnav">
+                                <li class="customlist"><a href="#">ABOUT US </a>
+                                </li>
+                                <li class="customlist"><a href="#">BLOG </a>
+                                </li>
+                                <li class="customlist"><a href="#">DONATE </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <!-- /.navbar-collapse -->
+                    </div>
+                    <!-- /.container-fluid -->
+                </nav>
+                <!-- /.navbar navbar-default -->
 </body>
 
 </html>
